# design-pattern

./: CMakeLists.txt  README.md
behavioral-patterns/: CMakeLists.txt
behavioral-patterns/chain-reponsibility/: CMakeLists.txt  Question.md  cor-broker.cpp  pointer-chain.cpp
behavioral-patterns/interpreter/: CMakeLists.txt  README.md  lexing-parser.cpp  tlon.cpp
behavioral-patterns/iterator/: CMakeLists.txt  binary-tree-iterator.cpp
behavioral-patterns/mediator/: CMakeLists.txt  README.md  mediator-borker.cpp
behavioral-patterns/mediator/chat-room/: CMakeLists.txt  chat-room.cpp  chat-room.hpp  main.cpp  person.cpp  person.hpp
behavioral-patterns/memento/: CMakeLists.txt  memento.cpp
behavioral-patterns/observer/: CMakeLists.txt  README.md
behavioral-patterns/state/: CMakeLists.txt  README.md  classic-state-impl.cpp  handmade-state.cpp  sm-boost.cpp
behavioral-patterns/strategy/: CMakeLists.txt  README.md  dynamic-strategy.cpp  static-strategy.cpp
behavioral-patterns/template-method/: CMakeLists.txt  README.md  template-method.cpp
behavioral-patterns/visitor/: CMakeLists.txt  README.md  classic-visitor.cpp  cyclic-visitor.cpp  multimethod-visitor.cpp  reflective-visitor.cpp  test-prog.cpp  variant-visitor.cpp
structural-patterns/: CMakeLists.txt
structural-patterns/composite/: CMakeLists.txt  composite.cpp
structural-patterns/decorator/: CMakeLists.txt  data-source-dynamic-decorator.cpp  shape-dynamic.cpp  shape-static-decorator-template-tip.cpp
structural-patterns/facade/: CMakeLists.txt  video-converter.cpp
structural-patterns/flyweight/: CMakeLists.txt  handmade-flyweight.cpp
structural-patterns/proxy/: README.md  (+4 more)
(+7 files in other folders)
